# smart-home-aiot-backend

./: .env.example  .gitignore  .graphifyignore  README.md  docker-compose.yml  main.py  pymakr.conf  pyproject.toml  requirements.txt
ai/: activity_model.pkl  data_pipeline.py
api/: routes_device.py  routes_sensor.py
core/: config.py
database/: models.py  session.py
database/migrations/: 001_init.sql
docs/: hardware-yolobit.md
firmware/yolobit/: README.md  dht20.py  lcd_1602.py  main.py  pymakr.conf  task_actuators.py  yolobit.code-workspace
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AlertBanner.jsx  Controls.jsx  Dashboard.jsx  LogTable.jsx  SensorCard.jsx
frontend/src/hooks/: useSensorData.js
gateway/: gateway.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
mqtt/: publisher.py  subscriber.py
services/: ai_inference.py  rule_engine.py
tests/: conftest.py  test_api_devices.py  test_api_sensors.py  test_architecture_alignment.py  test_gateway_serial.py  test_integration_manual_override.py  test_rule_engine.py
